# skytree

./: .env  Cargo.toml  Makefile  README.md  database.sqlite  skytree.ini
.cargo/: config.toml
migrations/2023-03-02-173455_v1/: down.sql  up.sql
misc/: postman.json
negotiated/: Cargo.toml
negotiated/src/: lib.rs
rest/: Cargo.toml
rest-derive/: Cargo.toml
rest-derive/src/: lib.rs
rest/src/: lib.rs
skytree/: Cargo.toml  database.sqlite  skytree.ini
skytree/misc/: postman.json
skytree/src/: lib.rs  main.rs
skytree/src/negotiated/: mod.rs
skytree/src/rest/: mod.rs
skytree/src/skytree/: host_group.rs
skytree/templates/host_groups/: get.hbs
src/: lib.rs  main.rs  schema.rs
src/negotiated/: mod.rs
src/skytree/: host_group.rs  mod.rs  rest.rs
templates/layout/: full-page.hbs
