[package]
name = "skytree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-trait = "0.1.60"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
erased-serde = "0.3.X"
handlebars = { version = "4.3.X", features = [ "default", "script_helper", "dir_source", "rust-embed" ]}
clap = { version = "4.1.X", default-features = true, features = [ "derive", "unicode" ] }
ini = "1.3.X"