[package]
name = "skytree"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.X", features = [ "std", "backtrace" ] }
actix-web = "4"
async-trait = "0.1.60"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
erased-serde = "0.3.X"
handlebars = { version = "4.3.X", default-features = true, features = [ "script_helper", "dir_source", "rust-embed" ]}
clap = { version = "4.1.X", default-features = true, features = [ "derive", "unicode" ] }
ini = "1.3.X"
diesel = { version = "2.0.X", features = ["sqlite", "returning_clauses_for_sqlite_3_35" ] }
dotenvy = "0.15"

[dependencies.negotiated]
version = "0.X"
path = "../negotiated"

[dependencies.rest]
version = "0.X"
path = "../rest"
